force-app/main/default/objects/Feedback_Question__c/Feedback_Question__c.object-meta.xml
<CustomObject>
    <label>Feedback Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Feedback Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>