force-app/main/default/objects/Feedback_Question__c/fields/Feedback_Form__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Form</label>
    <referenceTo>Feedback_Form__c</referenceTo>
    <relationshipLabel>Feedback Questions</relationshipLabel>
    <relationshipName>Feedback_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>