force-app/main/default/objects/Feedback_Question__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <length>100</length>
    <type>Text</type>
</CustomField>