force-app/main/default/objects/Feedback_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>