force-app/main/default/objects/Feedback_Question__c/validationRules/Picklist_values_not_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_values_not_entered</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Input_Type__c, &quot;Picklist&quot;) &amp;&amp; ISBLANK(Picklist_Values__c)</errorConditionFormula>
    <errorDisplayField>Picklist_Values__c</errorDisplayField>
    <errorMessage>Picklist values must be provided when Input Type is set to Picklist</errorMessage>
</ValidationRule>